// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders correctly it renders correctly whilst loading 1`] = `
Array [
  <div
    className="modal display-block"
  >
    <section
      className="modal-main"
    >
      <h3>
        Todo Application Information
      </h3>
      <p>
        Data not available from server: Cannot read property 'length' of undefined
      </p>
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Close
      </button>
    </section>
  </div>,
  "",
  "",
  <div
    className="container"
  >
    <header>
      <nav
        className="navbar navbar-expand-sm"
      >
        <a
          className="navbar-brand"
          href="/https://www.qa.com"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="QA Ltd"
            src="qalogo.svg"
            style={
              Object {
                "width": "100px",
              }
            }
          />
        </a>
        <a
          className="navbar-brand"
          href="/"
        >
          <h1>
            Todo App
          </h1>
        </a>
        <div
          className="collapse navbar-collapse"
        >
          <ul
            className="navbar-nav mr-auto"
          >
            <li>
              <a
                aria-current="page"
                className="nav-link nav-link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                All Todos
              </a>
            </li>
            <li>
              <a
                aria-current={null}
                className="nav-link"
                data-testid="addTodoLink"
                href="/add"
                onClick={[Function]}
              >
                Add Todo
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </header>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <h3>
          Todos List
        </h3>
        <table
          className="table table-striped"
        >
          <thead>
            <tr>
              <th>
                Description
              </th>
              <th>
                Date Created
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colSpan="3"
                id="error"
              >
                Data not available from server: Cannot read property 'length' of undefined
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <footer
      className="mt-auto py-3 container text-center"
    >
      © QA Ltd 2019-
    </footer>
  </div>,
]
`;

exports[`App component renders correctly it renders correctly with error 1`] = `
Array [
  <div
    className="modal display-block"
  >
    <section
      className="modal-main"
    >
      <h3>
        Todo Application Information
      </h3>
      <p>
        Data not available from server: undefined
      </p>
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Close
      </button>
    </section>
  </div>,
  "",
  "",
  <div
    className="container"
  >
    <header>
      <nav
        className="navbar navbar-expand-sm"
      >
        <a
          className="navbar-brand"
          href="/https://www.qa.com"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="QA Ltd"
            src="qalogo.svg"
            style={
              Object {
                "width": "100px",
              }
            }
          />
        </a>
        <a
          className="navbar-brand"
          href="/"
        >
          <h1>
            Todo App
          </h1>
        </a>
        <div
          className="collapse navbar-collapse"
        >
          <ul
            className="navbar-nav mr-auto"
          >
            <li>
              <a
                aria-current="page"
                className="nav-link nav-link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                All Todos
              </a>
            </li>
            <li>
              <a
                aria-current={null}
                className="nav-link"
                data-testid="addTodoLink"
                href="/add"
                onClick={[Function]}
              >
                Add Todo
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </header>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <h3>
          Todos List
        </h3>
        <table
          className="table table-striped"
        >
          <thead>
            <tr>
              <th>
                Description
              </th>
              <th>
                Date Created
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colSpan="3"
                id="error"
              >
                Data not available from server: undefined
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <footer
      className="mt-auto py-3 container text-center"
    >
      © QA Ltd 2019-
    </footer>
  </div>,
]
`;

exports[`App component renders correctly it renders correctly with no data 1`] = `
Array [
  "",
  "",
  "",
  <div
    className="container"
  >
    <header>
      <nav
        className="navbar navbar-expand-sm"
      >
        <a
          className="navbar-brand"
          href="/https://www.qa.com"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="QA Ltd"
            src="qalogo.svg"
            style={
              Object {
                "width": "100px",
              }
            }
          />
        </a>
        <a
          className="navbar-brand"
          href="/"
        >
          <h1>
            Todo App
          </h1>
        </a>
        <div
          className="collapse navbar-collapse"
        >
          <ul
            className="navbar-nav mr-auto"
          >
            <li>
              <a
                aria-current="page"
                className="nav-link nav-link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                All Todos
              </a>
            </li>
            <li>
              <a
                aria-current={null}
                className="nav-link"
                data-testid="addTodoLink"
                href="/add"
                onClick={[Function]}
              >
                Add Todo
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </header>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <h3>
          Todos List
        </h3>
        <table
          className="table table-striped"
        >
          <thead>
            <tr>
              <th>
                Description
              </th>
              <th>
                Date Created
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colSpan="3"
                id="error"
              >
                There are no todos stored
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <footer
      className="mt-auto py-3 container text-center"
    >
      © QA Ltd 2019-
    </footer>
  </div>,
]
`;

exports[`App component renders correctly it renders correctly with sample todos 1`] = `
Array [
  "",
  "",
  "",
  <div
    className="container"
  >
    <header>
      <nav
        className="navbar navbar-expand-sm"
      >
        <a
          className="navbar-brand"
          href="/https://www.qa.com"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="QA Ltd"
            src="qalogo.svg"
            style={
              Object {
                "width": "100px",
              }
            }
          />
        </a>
        <a
          className="navbar-brand"
          href="/"
        >
          <h1>
            Todo App
          </h1>
        </a>
        <div
          className="collapse navbar-collapse"
        >
          <ul
            className="navbar-nav mr-auto"
          >
            <li>
              <a
                aria-current="page"
                className="nav-link nav-link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                All Todos
              </a>
            </li>
            <li>
              <a
                aria-current={null}
                className="nav-link"
                data-testid="addTodoLink"
                href="/add"
                onClick={[Function]}
              >
                Add Todo
              </a>
            </li>
          </ul>
        </div>
      </nav>
    </header>
    <div
      className="container"
    >
      <div
        className="row"
      >
        <h3>
          Todos List
        </h3>
        <table
          className="table table-striped"
        >
          <thead>
            <tr>
              <th>
                Description
              </th>
              <th>
                Date Created
              </th>
              <th>
                Action
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="completed"
              >
                Sample Todo 1
              </td>
              <td
                className="completed"
              >
                Sat, 04 May 2019 15:00:00 GMT
              </td>
              <td>
                N/A
              </td>
            </tr>
            <tr>
              <td
                className="completed"
              >
                Sample Todo 2
              </td>
              <td
                className="completed"
              >
                Sat, 04 May 2019 15:30:00 GMT
              </td>
              <td>
                N/A
              </td>
            </tr>
            <tr>
              <td
                className=""
              >
                Sample Todo 3
              </td>
              <td
                className=""
              >
                Sat, 04 May 2019 15:45:00 GMT
              </td>
              <td>
                <a
                  className="link"
                  href="/edit/5cc08495bf3fd62d03f2f4c3"
                  onClick={[Function]}
                >
                  Edit
                </a>
              </td>
            </tr>
            <tr>
              <td
                className=""
              >
                Sample Todo 4
              </td>
              <td
                className=""
              >
                Sat, 04 May 2019 16:00:00 GMT
              </td>
              <td>
                <a
                  className="link"
                  href="/edit/5cc08495bf3fd62d03f2f4c4"
                  onClick={[Function]}
                >
                  Edit
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <footer
      className="mt-auto py-3 container text-center"
    >
      © QA Ltd 2019-
    </footer>
  </div>,
]
`;
